<resources>
    <string name="app_name">AppOrderDrink</string>
    <string name="tendangnhap"> Tên đăng nhập</string>
    <string name="hovaten"> Họ và tên</string>
    <string name="nhapmatkhau"> Mật khẩu</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="cancuoccongdan">Căn cước công dân</string>
    <string name="dongy"> Đồng ý</string>
    <string name="thoat">Thoát</string>
    <string name="dangky">Đăng ký</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="loinhaptendangnhap"> Vui lòng nhập tên đăng nhập !</string>
    <string name="loinhapmatkhau"> Vui lòng nhập mật khẩu! </string>
    <string name="themthanhcong"> Thêm thành công! </string>
    <string name="themthatbai"> Thêm thất bại! </string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="trangchu">Trang chủ</string>
    <string name="thucdon">Thực đơn</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="thongke">Thống kê</string>
    <string name="caidat">Cài đặt</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Mo">Mở</string>
    <string name="Dong">Đóng</string>
    <string name="ThemBan">Thêm bàn</string>
    <string name="TenBan">Tên bàn</string>
    <string name="themthucdon">Thêm thực đơn</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="giatien">Giá tiền</string>
    <string name="banan">Bàn ăn</string>
    <string name="loaithucdon">Loại thực đơn</string>
    <string name="tenloai">Tên loại</string>
    <string name="vuilongnhapdulieu">Vui lòng nhập dữ liệu !!!</string>
    <string name="loithemmonan">Vui lòng nhập đầy đủ thông tin</string>
</resources>