<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@color/design_default_color_primary"
    tools:context=".DangKyActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/dangky"
        android:layout_above="@+id/InKhungDangKy"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="30dp"
        />

    <LinearLayout
        android:id="@+id/InKhungDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/tendangnhap"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textColorHint="#757575"
           />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/hovaten"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textColorHint="#757575"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/nhapmatkhau"
            android:minHeight="48dp"
            android:padding="10dp"
            android:password="true"
            android:textColor="@color/gray"
            android:textColorHint="#757575" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nam"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nu"
                />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/calendar"
            android:drawablePadding="10dp"
            android:hint="@string/ngaysinh"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/gray"
            android:textColorHint="#757575" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/idcard"
            android:drawablePadding="10dp"
            android:hint="@string/cancuoccongdan"
            android:minHeight="48dp"
            android:padding="10dp"
            android:password="true"
            android:textColor="@color/gray"
            android:textColorHint="#757575" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/dongy"
                android:textColor="#212121"
                android:background="@color/greenButton"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/thoat"
                android:background="@color/orangeButton"
                android:textColor="#212121"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>